css/income.css
/* ... */
.fee > div {
  padding: 16px;
}
.fee h3 {
  text-align: center;
  background: #d9d9d9;
  margin: 0;
  padding: 20px 0;
}
.fee h1 {
  color: #404040;
  text-align: center;
  margin-top: 0;
}
.fee p {
  text-align: center;
}
.fee a.register {
  width: 100%;
  color: #ffffff !important;
  background: #0070c0;
  text-align: center;
  padding: 20px 0;
}
.fee .late {
  text-decoration: line-through;
}
.fee .border {
  border-right: 1px solid #eee;
}
#main a.plusminus {
  padding-left: 5px;
  padding-right: 5px;
}
#main a.plusminus.disabled {
  color: #d9d9d9 !important;
}

ul.w3-ul.banking, ul.w3-ul.personal, ul.w3-ul.affiliation {
  font-size: 20px;
  line-height: 20px;
  text-align: right;
}
.bank, .data {
  font-size: 15px;
  line-height: 15px;
}

u {
  text-decoration: underline;
}

.program span {
  margin-right: 5px;
  font-size: 80%;
  background-color: #0070c0;
  color: white;
  font-weight: bold;
  padding: 2px 8px;
  border-radius: 3px;
  white-space: nowrap;
}
.program span:first-of-type {
  margin-left: 10px;
}

#program .w3-ul li:hover, #posters .w3-ul li:hover {
  background-color: #dddddd;
}

#program .w3-ul li a:hover {
  text-decoration: underline !important;
}
#program .w3-ul li span {
  margin-right: 10px;
  font-size: 80%;
  font-style: normal;
  background-color: #0070c0;
  color: white;
  font-weight: bold;
  padding: 2px 8px;
  border-radius: 3px;
}
#program .w3-ul li span.type {
  margin-right: 5px;
  background-color: #404040;
}
#program .w3-ul li div.speaker {
  font-style: normal;
  text-align: right;
  padding-left: 70px;
}
#program .w3-ul li div.place {
  float: right;
}
#program .w3-ul li div a {
  color: #404040 !important;
  text-decoration: underline !important;
}
#program .w3-ul li i {
  color: #dddddd;
  margin-left: 5px;
}
#program .w3-ul li.registration span {
  color: #ffffff;
  background-color: #26b000;
}
#program .w3-ul li.break span {
  background-color: #404040;
}
#program .w3-ul li.break i {
  color: #404040;
}
/*#program .w3-ul li.break a {
  color: #404040 !important;
}*/
#program .w3-ul li.lecture {
  font-style: italic;
}
/*#program .w3-ul li.chair {
  text-align: center;
}*/
#program .w3-ul li.chair a {
  float: right;
  color: #404040 !important;
  text-decoration: underline !important;
}
#program .w3-ul li span.invisible {
  background-color: #ffffff;
}
#program .w3-ul li:hover span.invisible {
  color: #dddddd;
  background-color: #dddddd;
}

#posters .w3-ul li {
  font-style: italic;
}
#posters .w3-ul li span {
  display: block;
  font-style: normal;
  text-align: right;
  padding-left: 60px;
}

#posters ol.w3-ul {
  list-style-type: none;
  counter-reset: step-counter;
}
#posters ol.w3-ul li {
  counter-increment: step-counter;
}
ol.w3-ul li::before {
  font-style: normal;
  content: counter(step-counter);
  margin-right: 10px;
  font-size: 80%;
  background-color: #404040; /*#0070c0;*/
  color: white;
  font-weight: bold;
  padding: 2px 8px;
  border-radius: 3px;
}
ol.w3-ul.session-1 li::before {
  content: "P-I-0" counter(step-counter);
}
ol.w3-ul.session-1 li:nth-child(n+10):before {
  content: "P-I-" counter(step-counter);
}
ol.w3-ul.session-2 li::before {
  content: "P-II-0" counter(step-counter);
}
ol.w3-ul.session-2 li:nth-child(n+10):before {
  content: "P-II-" counter(step-counter);
}

#speakers .speaker:hover, #accomodation .hotel:hover {
  background-color: #d9d9d9;
}

.speaker {
  padding-top: 14px !important;
}
.speaker img {
  max-width: 300px;
  width: 50%;
}
.speaker .name {
  font-weight: 700;
}
.speaker .uni {
  font-size: 14px;
}
.speaker .lecture {
  font-size: 80%;
  font-style: normal;
  background-color: #404040;
  color: white;
  font-weight: bold;
  padding: 2px 8px;
  border-radius: 3px;
}

#accomodation .hotel:hover ul li {
  border-color: #ffffff;
}

.hotel {
  padding-top: 14px !important;
}
.hotel .img {
  overflow: hidden;
  padding: 0 !important;
  margin: 0 16px;
}
.hotel .img a img {
  width: 100%;
  margin: -10px;
  -moz-transition: all 0.25s;
  -webkit-transition: all 0.25s;
  transition: all 0.25s;
}
.hotel .img a:hover img {
  -moz-transform: scale(1.08);
  -webkit-transform: scale(1.08);
  transform: scale(1.08);
}

#venue img {
  display: inline-block;
  max-width: 300px;
  width: 100%;
}
#venue .w3-row-padding > .w3-col {
  padding: 2px !important;
}
#venue .photos div {
  text-align: center;
}

.transportation .w3-container {

}
.transportation .w3-accordion-content {
  margin: 0;
  padding-left: 0;
  padding-right: 0;
}
.transportation .w3-accordion-content p {
  margin: 15px 0;
}
.transportation .w3-accordion-content p:first-of-type {
  margin-top: 5px;
}

#budapest .w3-ul li, #bratislava .w3-ul li, #warsaw .w3-ul li, #vienna .w3-ul li, #prague .w3-ul li {
  border: 0 !important;
}

#accomodation a.selected {
  color: #404040 !important;
}
#accomodation .hotel {
  margin-top: 32px;
}
#accomodation .hotel.opacity {
  opacity: 0.2;
  filter: alpha(opacity=20);
}
#accomodation .hotel .w3-ul {
  display: inline-block;
  width: 90%;
}

#conference .address {
  position: absolute;
  z-index: 1;
  background: rgba(255, 255, 255, 0.8);
  min-height: 350px;
  width: 30%;
  max-width: 30%;
}
/*#conference ul.w3-ul {
  display: inline-block;
  margin: 70px 20px 0 20px;
  padding: 0 8px;
}*/
#conference .address p {
  margin: 40px 20px 0 20px;
  padding: 0 8px;
}
#conference .toggler {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 1;
  min-width: 36px;
  text-align: center;
  background: none;
}
#conference .toggler.bg {
  background: rgba(255, 255, 255, 0.8);
}
#conference .toggler a {
  font-size: 20px;
  padding: 8px;
  color: #404040 !important;
}
#conference .map-wrapper {
  position: relative;
  min-height: 560px;
}
/*#conference .map-details {
  width: 50% !important;
  min-width: 300px;
}*/

#map-canvas {
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
}

.building {
  margin-top: 20px;
}
/* ... */

